--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
     
     <section id="projects">
         <div class="project-tile">
-            <h2>FCC Survey Form Project</h2>
+            <h2>Survey Form</h2>
             <img>
-            <p>my first html css form project</p>
+            <p>My first html css form</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/PoLjgMB" target="_blank">View Project</a>
         </div>
        <div class="project-tile">
             <h2>Tribute to Dr. Muhammad Iqbal</h2>
             <img>
-            <p>my first html css tribute page</p>
+            <p>My first html css tribute page</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/YzgyWxz" target="_blank">View Project</a>
         </div>
         <div class="project-tile">
             <h2>Technical Documentation Page</h2>
             <img>
-            <p>my first html css Documentation page</p>
+            <p>My first html css Documentation page</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/MWMRPrV" target="_blank">View Project</a>
         </div>
         <div class="project-tile">
             <h2>Product Landing Page</h2>
             <img>
-            <p>my first html css Landing page</p>
+            <p>My first html css Landing page</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
         </div>
 
@@ -63,15 +63,22 @@
         <div class="project-tile">
             <h2>Roman Numeral Converter</h2>
             <img>
-            <p>Converting numbers to Roman numeral</p>
+            <p>Converting arabic numbers to Roman numeral</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile">
             <h2>Phone Number Validator</h2>
             <img>
-            <p>That a US phone number validator</p>
+            <p>That is a US phone number validator</p>
             <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile">
+            <h2>Cash Register App</h2>
+            <img>
+            <p>Calculate change due cash register</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile">
@@ -84,12 +91,11 @@
     </section>
     
     <section id="contact">
-        <p>Find me on:</p>
     <ul>
-        <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a></li>
+        <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-github"></i></a></li>
+    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-instagram"></i></a></li>
+    <li><a id="profile-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 </section>
 <footer>
     <p>&copy; 2024 Created by Hasan Zaib. All rights reserved.</p>
