--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Web developer portfolio showcasing projects, skills, and achievements.">
   <meta name="keywords" content="portfolio, web developer, frontend, projects">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Hassan Zaib">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
   <title>Your Portfolio</title>
