--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
   <footer class="footer">
     <p>&copy; 2024 Your Name. All Rights Reserved.</p>
   </footer>
+  <script src="script.js" defer></script>
 </body>
 </html>
