--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="keywords" content="portfolio, web development, frontend, HTML, CSS, JavaScript">
     <meta name="author" content="Hassan Zaib">
     <title>Personal Portfolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
