--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
     <meta name="author" content="Hassan Zaib">
     <title>Personal Portfolio</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        #typewriter-h1, #typewriter-p {
+            display: inline-block;
+            border-right: 2px solid black; /* Simulates the cursor */
+            white-space: nowrap; /* Prevents wrapping */
+            overflow: hidden; /* Hides extra text during typing */
+            animation: blink 0.7s steps(1) infinite;
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent;
+            }
+        }
+    </style>
 </head>
 <body>
     <header id="navbar">
@@ -27,73 +42,12 @@
     </header>
 
     <section id="welcome-section" class="hidden">
-        <h1 id="typewriter">Welcome to My Portfolio</h1>
-        <p id="typewriter">I am Hassan Zaib, a frontend developer.</p>
+        <h1 id="typewriter-h1">Welcome to My Portfolio</h1>
+        <p id="typewriter-p">I am Hassan Zaib, a frontend developer.</p>
     </section>
 
     <section id="projects">
-        <div class="project-tile hidden">
-            <h2>Survey Form</h2>
-            <img src="https://source.unsplash.com/300x200/?form,document" alt="Survey Form">
-            <p>My first HTML CSS form</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/PoLjgMB" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Tribute to Dr. Muhammad Iqbal</h2>
-            <img src="https://source.unsplash.com/300x200/?tribute,history" alt="Tribute to Dr. Muhammad Iqbal">
-            <p>My first HTML CSS tribute page</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/YzgyWxz" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Technical Documentation Page</h2>
-            <img src="https://source.unsplash.com/300x200/?documentation,technology" alt="Technical Documentation Page">
-            <p>My first HTML CSS documentation page</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/MWMRPrV" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Product Landing Page</h2>
-            <img src="https://source.unsplash.com/300x200/?landing-page,product" alt="Product Landing Page">
-            <p>My first HTML CSS landing page</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Palindrome Checker</h2>
-            <img src="https://source.unsplash.com/300x200/?code,algorithm" alt="Palindrome Checker">
-            <p>Find a palindrome word</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Roman Numeral Converter</h2>
-            <img src="https://source.unsplash.com/300x200/?numbers,roman" alt="Roman Numeral Converter">
-            <p>Converting Arabic numbers to Roman numerals</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Phone Number Validator</h2>
-            <img src="https://source.unsplash.com/300x200/?phone,validation" alt="Phone Number Validator">
-            <p>That is a US phone number validator</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Cash Register App</h2>
-            <img src="https://source.unsplash.com/300x200/?cash,register" alt="Cash Register App">
-            <p>Calculate change due cash register</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-tile hidden">
-            <h2>Pokémon Search App</h2>
-            <img src="https://source.unsplash.com/300x200/?pokemon,search" alt="Pokémon Search App">
-            <p>Search Pokemon Details</p>
-            <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
-        </div>
+        <!-- Projects Content Here -->
     </section>
 
     <section id="contact">
@@ -109,35 +63,41 @@
     </footer>
 
     <script>
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach((entry) => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('fade-in-up');
-                    entry.target.classList.remove('hidden');
-                }
-            });
-        });
+        // Typewriter for the <h1>
+        const typewriterTextH1 = "Welcome to My Portfolio";
+        const typewriterElementH1 = document.getElementById("typewriter-h1");
+        let iH1 = 0;
 
-        const hiddenElements = document.querySelectorAll('.hidden');
-        hiddenElements.forEach((el) => observer.observe(el));
-        // Typewriter effect
-const typewriterText = "Welcome to My Portfolio";
-const typewriterElement = document.getElementById("typewriter");
-let i = 0;
+        function typeWriterH1() {
+            if (iH1 < typewriterTextH1.length) {
+                typewriterElementH1.innerHTML += typewriterTextH1.charAt(iH1);
+                iH1++;
+                setTimeout(typeWriterH1, 100); // Adjust typing speed
+            } else {
+                // Once <h1> is done, start the <p> typewriter
+                typeWriterP();
+            }
+        }
 
-function typeWriter() {
-    if (i < typewriterText.length) {
-        typewriterElement.innerHTML += typewriterText.charAt(i);
-        i++;
-        setTimeout(typeWriter, 100); // Adjust typing speed (milliseconds per character)
-    }
-}
+        // Typewriter for the <p>
+        const typewriterTextP = "I am Hassan Zaib, a frontend developer.";
+        const typewriterElementP = document.getElementById("typewriter-p");
+        let iP = 0;
 
-// Start the effect when the page loads
-window.onload = () => {
-    typeWriter();
-};
-    
+        function typeWriterP() {
+            if (iP < typewriterTextP.length) {
+                typewriterElementP.innerHTML += typewriterTextP.charAt(iP);
+                iP++;
+                setTimeout(typeWriterP, 100); // Adjust typing speed
+            }
+        }
+
+        // Start the effect when the page loads
+        window.onload = () => {
+            typeWriterH1();
+        };
+
     </script>
 </body>
-</html>
+    </html>
+    
