--- a/index.html
+++ b/index.html
@@ -14,34 +14,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        #typewriter-h1, #typewriter-p {
-            display: inline-block;
-            border-right: 2px solid black; /* Simulates the cursor */
-            white-space: nowrap; /* Prevents wrapping */
-            overflow: hidden; /* Hides extra text during typing */
-            animation: blink 0.7s steps(1) infinite;
-        }
-
-        .fade-in-up {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fade-in-up 1s forwards;
-        }
-
-        @keyframes fade-in-up {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes blink {
-            50% {
-                border-color: transparent;
-            }
-        }
-    </style>
 </head>
 <body>
     <header id="navbar">
@@ -55,15 +27,72 @@
     </header>
 
     <section id="welcome-section" class="hidden">
-        <h1 id="typewriter-h1">Welcome to My Portfolio</h1>
-        <p id="typewriter-p">I am Hassan Zaib, a frontend developer.</p>
+        <h1 id="typewriter">Welcome to My Portfolio</h1>
+        <p id="typewriter-paragraph">I am Hassan Zaib, a frontend developer.</p>
     </section>
 
     <section id="projects">
-        <!-- Projects Content Here -->
         <div class="project-tile hidden">
-            <h2>Project Title</h2>
-            <p>Project description goes here.</p>
+            <h2>Survey Form</h2>
+            <img src="https://source.unsplash.com/300x200/?form,document" alt="Survey Form">
+            <p>My first HTML CSS form</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/PoLjgMB" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Tribute to Dr. Muhammad Iqbal</h2>
+            <img src="https://source.unsplash.com/300x200/?tribute,history" alt="Tribute to Dr. Muhammad Iqbal">
+            <p>My first HTML CSS tribute page</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/YzgyWxz" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Technical Documentation Page</h2>
+            <img src="https://source.unsplash.com/300x200/?documentation,technology" alt="Technical Documentation Page">
+            <p>My first HTML CSS documentation page</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/MWMRPrV" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Product Landing Page</h2>
+            <img src="https://source.unsplash.com/300x200/?landing-page,product" alt="Product Landing Page">
+            <p>My first HTML CSS landing page</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Palindrome Checker</h2>
+            <img src="https://source.unsplash.com/300x200/?code,algorithm" alt="Palindrome Checker">
+            <p>Find a palindrome word</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Roman Numeral Converter</h2>
+            <img src="https://source.unsplash.com/300x200/?numbers,roman" alt="Roman Numeral Converter">
+            <p>Converting Arabic numbers to Roman numerals</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Phone Number Validator</h2>
+            <img src="https://source.unsplash.com/300x200/?phone,validation" alt="Phone Number Validator">
+            <p>That is a US phone number validator</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Cash Register App</h2>
+            <img src="https://source.unsplash.com/300x200/?cash,register" alt="Cash Register App">
+            <p>Calculate change due cash register</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-tile hidden">
+            <h2>Pokémon Search App</h2>
+            <img src="https://source.unsplash.com/300x200/?pokemon,search" alt="Pokémon Search App">
+            <p>Search Pokemon Details</p>
+            <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
         </div>
     </section>
 
@@ -93,36 +122,34 @@
         const hiddenElements = document.querySelectorAll('.hidden');
         hiddenElements.forEach((el) => observer.observe(el));
 
-        // Typewriter for the <h1>
+        // Typewriter effect for H1 and paragraph
         const typewriterTextH1 = "Welcome to My Portfolio";
-        const typewriterElementH1 = document.getElementById("typewriter-h1");
+        const typewriterTextP = "I am Hassan Zaib, a frontend developer.";
+        const typewriterElementH1 = document.getElementById("typewriter");
+        const typewriterElementP = document.getElementById("typewriter-paragraph");
+
         let iH1 = 0;
+        let iP = 0;
 
         function typeWriterH1() {
             if (iH1 < typewriterTextH1.length) {
                 typewriterElementH1.innerHTML += typewriterTextH1.charAt(iH1);
                 iH1++;
-                setTimeout(typeWriterH1, 100); // Adjust typing speed
+                setTimeout(typeWriterH1, 100); // Adjust typing speed for H1
             } else {
-                // Once <h1> is done, start the <p> typewriter
-                typeWriterP();
+                typeWriterP(); // Start paragraph typing after H1 completes
             }
         }
-
-        // Typewriter for the <p>
-        const typewriterTextP = "I am Hassan Zaib, a frontend developer.";
-        const typewriterElementP = document.getElementById("typewriter-p");
-        let iP = 0;
 
         function typeWriterP() {
             if (iP < typewriterTextP.length) {
                 typewriterElementP.innerHTML += typewriterTextP.charAt(iP);
                 iP++;
-                setTimeout(typeWriterP, 100); // Adjust typing speed
+                setTimeout(typeWriterP, 100); // Adjust typing speed for paragraph
             }
         }
 
-        // Start the effect when the page loads
+        // Start the typewriter effect when the page loads
         window.onload = () => {
             typeWriterH1();
         };
