--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
 
     <section id="welcome-section" class="hidden">
-        <h1 id="typewriter">Welcome to My Portfolio</h1>
-        <p id="typewriter-paragraph">I am Hassan Zaib, a frontend developer.</p>
+        <h1 id="typewriter"></h1>
+        <p id="typewriter-paragraph"></p>
     </section>
 
     <section id="projects">
