--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         hiddenElements.forEach((el) => observer.observe(el));
 
         // Typewriter effect for H1 and paragraph
-        const typewriterTextH1 = "Welcome to My Portfolio" + `<br>`;
-        const typewriterTextP = "I am Hassan Zaib " + `<br>` + " a frontend developer.";
+        const typewriterTextH1 = "Welcome to My Portfolio";
+        const typewriterTextP = "I am Hassan Zaib, a frontend developer.";
         const typewriterElementH1 = document.getElementById("typewriter");
         const typewriterElementP = document.getElementById("typewriter-paragraph");
 
