--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
         <section id="contact">
     <h2>Contact Me</h2>
-    <form id="contact-form" action="https://formspree.io/f/mayqrrbj" method="POST">
+    <form id="contact-form" action="https://formspree.io/f/mgvejevd" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         
