--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         
         <button type="submit">Send</button>
     </form>
-        
+        </section>
+    <section id="contact2">
         <ul>
             <li><a id="github-link" href="https://github.com/webro1989" target="_blank"><i class="fab fa-github"></i></a></li>
             <li><a id="facebook-link" href="https://facebook.com/webro1989" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
