--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header id="navbar">
+        <img id="logo" src="fevicon.ico">
         <nav class="hidden">
             <ul>
                 <li><a href="#welcome-section">Home</a></li>
