--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&display=swap">
+  <meta name="google-site-verification" content="4NgpCe9WSXCLggoHVyOOHxaUPbJJ1I2EfBVZ6QBDsxI" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
