Added project images

--- a/index.html
+++ b/index.html
@@ -36,46 +36,55 @@
     <section id="projects">
         <div class="project-tile hidden">
             <h2>Survey Form</h2>
+            <img src="https://codepen.io/Hassan-Zaib/full/PoLjgMB/Image/smaall.png" alt="Image of a survey form">
                         <a href="https://codepen.io/Hassan-Zaib/pen/PoLjgMB" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Tribute to Dr. Muhammad Iqbal</h2>
+           <img src="https://codepen.io/Hassan-Zaib/full/YzgyWxz">
             <a href="https://codepen.io/Hassan-Zaib/pen/YzgyWxz" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Technical Documentation Page</h2>
-                        <a href="https://codepen.io/Hassan-Zaib/pen/MWMRPrV" target="_blank">View Project</a>
+               <img src="https://codepen.io/Hassan-Zaib/full/MWMRPrV/Image/small.png" "Image of the tech docs page">   
+            <a href="https://codepen.io/Hassan-Zaib/pen/MWMRPrV" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Product Landing Page</h2>
-                        <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
+            <img src="https://codepen.io/Hassan-Zaib/full/yLdrQVG/Image/small.png"> 
+            <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Palindrome Checker</h2>
-                        <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
+            <img src="https://codepen.io/Hassan-Zaib/full/OJeeKMQ/Image/small.png">
+            <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Roman Numeral Converter</h2>
-              <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
+           <img src="https://codepen.io/Hassan-Zaib/full/rNEEXwN/Image/small.png" alt="photo of a roman numeral converter">
+            <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Phone Number Validator</h2>
+            <img src="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ/image/small.png" alt="A Picture of the Phone Validator">
              <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Cash Register App</h2>
-                        <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
+               <img src="https://codepen.io/Hassan-Zaib/full/VwoYMpP/Image/small.png" alt="Cash register app image"> 
+            <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Pokémon Search App</h2>
+          <img src="https://codepen.io/Hassan-Zaib/full/abgeYvj/Image/small.png">
             <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
         </div>
     </section>
