--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="project-tile hidden">
             <h2>Cash Register App</h2>
-               <img src="https://codepen.io/Hassan-Zaib/full/VwoYMpP/Image/small.png" alt="Cash register app image"> 
+               <img src="https://imgur.com/a/2I9hhbi" alt="Cash register app image"> 
             <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
         </div>
 
