--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="project-tile hidden">
             <h2>Pokémon Search App</h2>
-          <img src="https://codepen.io/Hassan-Zaib/full/abgeYvj/Image/small.png">
+          <img src="https://imgur.com/a/uHwuaRm">
             <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
         </div>
     </section>
