--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
         <div class="project-tile hidden">
             <h2>Cash Register App</h2>
-               <img src="https://imgur.com/a/2I9hhbi" alt="Cash register app image"> 
+               <img src="https://imgur.com/a/dKnWwiL" alt="Cash register app image"> 
             <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Pokémon Search App</h2>
-          <img src="https://imgur.com/a/uHwuaRm">
+          <img src="https://imgur.com/a/iD8i1Kz">
             <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
         </div>
     </section>
