--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="project-tile hidden">
             <h2>Phone Number Validator</h2>
-            <img src="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ/Image/small.png" alt="A Picture of the Phone Validator">
+            <img src="https://imgur.com/a/H8lEI0q" alt="A Picture of the Phone Validator">
              <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
         </div>
 
