--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="project-tile hidden">
             <h2>Roman Numeral Converter</h2>
-           <img src="https://codepen.io/Hassan-Zaib/full/rNEEXwN/Image/small.png" alt="photo of a roman numeral converter">
+           <img src="https://imgur.com/gallery/roman-numerals-converter-app-image-uIoZzH0" alt="photo of a roman numeral converter">
             <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
         </div>
 
