--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="project-tile hidden">
             <h2>Palindrome Checker</h2>
-            <img src="https://codepen.io/Hassan-Zaib/full/OJeeKMQ/Image/small.png">
+            <img src="https://imgur.com/gallery/palindrome-checker-app-8IUxkmh">
             <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
         </div>
 
