--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="project-tile hidden">
             <h2>Product Landing Page</h2>
-            <img src="https://codepen.io/Hassan-Zaib/full/yLdrQVG/Image/small.png"> 
+            <img src="https://imgur.com/gallery/product-landing-page-bh5fsqB"> 
             <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
         </div>
 
