--- a/index.html
+++ b/index.html
@@ -54,37 +54,37 @@
 
         <div class="project-tile hidden">
             <h2>Product Landing Page</h2>
-            <img src="https://imgur.com/gallery/product-landing-page-bh5fsqB"> 
+            <img src="https://imgur.com/gallery/product-landing-page-bh5fsqB.png"> 
             <a href="https://codepen.io/Hassan-Zaib/pen/yLdrQVG" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Palindrome Checker</h2>
-            <img src="https://imgur.com/gallery/palindrome-checker-app-8IUxkmh">
+            <img src="https://imgur.com/gallery/palindrome-checker-app-8IUxkmh.png">
             <a href="https://codepen.io/Hassan-Zaib/pen/OJeeKMQ" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Roman Numeral Converter</h2>
-           <img src="https://imgur.com/gallery/roman-numerals-converter-app-image-uIoZzH0" alt="photo of a roman numeral converter">
+           <img src="https://imgur.com/gallery/roman-numerals-converter-app-image-uIoZzH0.png" alt="photo of a roman numeral converter">
             <a href="https://codepen.io/Hassan-Zaib/pen/rNEEXwN" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Phone Number Validator</h2>
-            <img src="https://imgur.com/a/H8lEI0q" alt="A Picture of the Phone Validator">
+            <img src="https://imgur.com/a/H8lEI0q.png" alt="A Picture of the Phone Validator">
              <a href="https://codepen.io/Hassan-Zaib/pen/wvLLVjQ" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Cash Register App</h2>
-               <img src="https://imgur.com/a/dKnWwiL" alt="Cash register app image"> 
+               <img src="https://imgur.com/a/dKnWwiL.png" alt="Cash register app image"> 
             <a href="https://codepen.io/Hassan-Zaib/pen/VwoYMpP" target="_blank">View Project</a>
         </div>
 
         <div class="project-tile hidden">
             <h2>Pokémon Search App</h2>
-          <img src="https://imgur.com/a/iD8i1Kz">
+          <img src="https://imgur.com/a/iD8i1Kz.png">
             <a href="https://codepen.io/Hassan-Zaib/pen/abgeYvj" target="_blank">View Project</a>
         </div>
     </section>
